# Audiobook_Player

./: CMakeLists.txt  Issues  LOG  README.md  book_image  build.sh  install.sh  player.c  player.h  prototype  prototype.c  title  veruca_salt_number_one_blind.opus
Documents/: Prototype.1 Plan
Src/Player/: log.c  log.h  meson.build  player.c  player.h  player1.c  test.c
logging/: CMakeLists.txt
logging/exports/: logging.h
logging/src/: logging.c
player/: CMakeLists.txt
player/include/: player.h
player/src/: main.c  player.c
